--- a/podcast_alpha/package.json
+++ b/podcast_alpha/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
+    "primereact": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^2.5.1",
+    "primeicons": "^1.0.0",
+    "tsutils": "^3.17.1",
+    "typescript": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
