--- a/podcast_alpha/package.json
+++ b/podcast_alpha/package.json
@@ -7,13 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "primeicons": "^1.0.0",
     "primereact": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^2.5.1",
-    "primeicons": "^1.0.0",
+    "semantic-ui-css": "^2.4.1",
     "tsutils": "^3.17.1",
     "typescript": "^2.8.0"
   },
